--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,2 @@
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-
-citi_account.yaml
-output/
+config.yml
+data/
